--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorator="/layout/layout" >
+<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:th="http://www.thymeleaf.org"
+      layout:decorator="/layout/layout">
     <head th:fragment="head">
         <!-- Title -->
         <title>KoreaEgg</title>
@@ -19,9 +20,13 @@
 
         <!-- CSS Implementing Plugins -->
         <link rel="stylesheet" type="text/css" th:href="@{/vendor/font-awesome/css/all.min.css}" />
-        <link rel="stylesheet" type="text/css" th:href="@{vendor/animate.css/animate.min.css}">
+        <link rel="stylesheet" type="text/css" th:href="@{/vendor/hs-megamenu/src/hs.megamenu.css}">
+        <link rel="stylesheet" type="text/css" th:href="@{/vendor/malibu/jquery.mCustomScrollbar.css}"/>
+        <link rel="stylesheet" type="text/css" th:href="@{/vendor/custombox/dist/custombox.min.css}">
+        <link rel="stylesheet" type="text/css" th:href="@{/vendor/animate.css/animate.min.css}"/>
 
         <!-- CSS Space Template -->
         <link rel="stylesheet" type="text/css" th:href="@{/css/theme.css}" />
+        <link rel="stylesheet" type="text/css" th:href="@{/css/kegg.css}" />
     </head>
 </html>
