--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout" >
 
     <head layout:replace="fragments/head :: head"></head>
     <body>
@@ -11,6 +11,8 @@
         <section th:replace="fragments/foot :: foot"></section>
         <footer th:replace="fragments/footer :: footer"></footer>
         <footer th:replace="fragments/footer :: footer-js"></footer>
+
+        <footer layout:fragment="footer"></footer>
     </body>
 </html>
 <!-- https://blog.naver.com/hide305/221158531327 -->
