--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:th="http://www.thymeleaf.org"
-      layout:decorator="/layout/layout">
+      layout:decorator="layout/layout">
     <head th:fragment="head">
         <!-- Title -->
         <title>KoreaEgg</title>
