--- a/src/main/resources/templates/main/agent.html
+++ b/src/main/resources/templates/main/agent.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorator="/layout/layout" >
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorator="layout/layout" >
 
 <section layout:fragment="content">
     <!-- ========== MAIN CONTENT ========== -->
