--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorator="layout/layout" >
-
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorator="layout/default" >
 <section layout:fragment="content">
     <main id="content" role="main">
         <!-- Hero Section -->
@@ -336,10 +336,10 @@
             </div>
         </div>
     </main>
-</section>
-<footer layout:fragment="footer">
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=af40a347c5a17c5118392cee56f35da6&libraries=services"></script>
-    <script>
+
+    <script th:inline="javascript" type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=af40a347c5a17c5118392cee56f35da6&libraries=services"></script>
+    <script th:inline="javascript">
+        /*<![CDATA[*/
         var container = document.getElementById('map'); //지도를 담을 영역의 DOM 레퍼런스
         var options = { //지도를 생성할 때 필요한 기본 옵션
             center: new daum.maps.LatLng(33.450701, 126.570667), //지도의 중심좌표.
@@ -378,7 +378,8 @@
         // 이미지 지도를 생성합니다
         var staticMap = new daum.maps.StaticMap(staticMapContainer, staticMapOption);
 
+        console.log('scdasd');
+        /*]]>*/
     </script>
-
-</footer>
+</section>
 </html>
