--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,87 +1,110 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"  layout:decorate="~{layout/noFooter}" >
 <head>
-    <title>Spring Boot</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link href="webjars/bootstrap/3.2.0/css/bootstrap.min.css"
-          rel="stylesheet" media="screen"/>
-    <link href="../static/css/styles.css"
-          th:href="@{css/styles.css}"
-          rel="stylesheet"
-          media="screen"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/signin.css}" />
 </head>
-<body class="background"
-      style="background: url('../static/img/background.png') no-repeat center center fixed;"
-      th:style="'background: url(' + @{/img/background.png} + ') no-repeat center center fixed;'">
-<div class="container" th:if="${param.registration}">
-    <div class="row vertical-offset-100">
-        <div class="col-md-4 col-md-offset-4">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Registration form</h3>
-                </div>
-                <div class="panel-body">
-                    <form th:action="@{/registration}" method="post">
-                        <fieldset>
-                            <div class="form-group">
-                                <input class="form-control" placeholder="Username" name="username" type="text"/>
-                            </div>
-                            <div class="form-group">
-                                <input class="form-control" placeholder="Password" name="password" type="password" value=""/>
-                            </div>
-                            <div class="form-group" th:if="${param.error}">
-                                <div class="alert alert-danger" role="alert">
-                                    User already exist
-                                </div>
-                            </div>
-                            <div class="form-group" th:if="${param.success}">
-                                <div class="alert alert-success" role="alert">
-                                    You successfully registered
-                                </div>
-                            </div>
-                            <div class="form-group" th:if="${param.errorServer}">
-                                <div class="alert alert-danger" role="alert">
-                                    Server error
-                                </div>
-                            </div>
-                            <input class="btn btn-lg btn-success btn-block" type="submit" value="Sigin"/>
-                            <input onclick="location.href='/login';" class="btn btn-lg btn-success btn-block" type="button" value="Login"/>
-                        </fieldset>
-                    </form>
+        <!-- ========== MAIN CONTENT ========== -->
+        <form class="js-validate form-signin p-5" layout:fragment="content">
+            <!-- Logo -->
+            <div class="text-center">
+                <a href="../home/index.html" aria-label="Space">
+                    <img class="mb-3" th:src="@{/svg/logos/logo-short.svg}" alt="Logo" width="60" height="60">
+                </a>
+            </div>
+            <!-- End Logo -->
+
+            <!-- Title -->
+            <div class="text-center mb-4">
+                <h1 class="h3 mb-0">Please sign in</h1>
+                <p>Signin to manage your account.</p>
+            </div>
+            <!-- End Title -->
+
+            <!-- Input -->
+            <div class="js-form-message mb-3">
+                <div class="js-focus-state input-group form">
+                    <div class="input-group-prepend form__prepend">
+          <span class="input-group-text form__text">
+            <span class="fa fa-user form__text-inner"></span>
+          </span>
+                    </div>
+                    <input type="text" class="form-control form__input" name="id" required
+                           placeholder="ID"
+                           aria-label="ID"
+                           data-msg="Please enter a valid ID."
+                           data-error-class="u-has-error"
+                           data-success-class="u-has-success">
                 </div>
             </div>
-        </div>
-    </div>
-</div>
-<div class="container" th:unless="${param.registration}">
-    <div class="row vertical-offset-100">
-        <div class="col-md-4 col-md-offset-4">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h3 class="panel-title">Please sign in</h3>
-                </div>
-                <div class="panel-body">
-                    <form th:action="@{/login}" method="post">
-                        <fieldset>
-                            <div class="form-group">
-                                <input class="form-control" placeholder="Username" name="username" type="text"/>
-                            </div>
-                            <div class="form-group">
-                                <input class="form-control" placeholder="Password" name="password" type="password" value=""/>
-                            </div>
-                            <div class="form-group" th:if="${param.error}">
-                                <div class="alert alert-danger" role="alert">
-                                    Invalid username and password
-                                </div>
-                            </div>
-                            <input class="btn btn-lg btn-success btn-block" type="submit" value="Login"/>
-                            <input onclick="location.href='/login?registration';" class="btn btn-lg btn-success btn-block" type="button" value="Registration"/>
-                        </fieldset>
-                    </form>
+            <!-- End Input -->
+
+            <!-- Input -->
+            <div class="js-form-message mb-3">
+                <div class="js-focus-state input-group form">
+                    <div class="input-group-prepend form__prepend">
+          <span class="input-group-text form__text">
+            <span class="fa fa-lock form__text-inner"></span>
+          </span>
+                    </div>
+                    <input type="password" class="form-control form__input" name="password" required
+                           placeholder="Password"
+                           aria-label="Password"
+                           data-msg="Your password is invalid. Please try again."
+                           data-error-class="u-has-error"
+                           data-success-class="u-has-success">
                 </div>
             </div>
-        </div>
-    </div>
-</div>
-</body>
+            <!-- End Input -->
+
+            <div class="row mb-3">
+                <div class="col-6">
+                    <!-- Checkbox -->
+                    <div class="custom-control custom-checkbox d-flex align-items-center text-muted">
+                        <input type="checkbox" class="custom-control-input" id="rememberMeCheckbox">
+                        <label class="custom-control-label" for="rememberMeCheckbox">
+                            아이디 저장
+                        </label>
+                    </div>
+                    <!-- End Checkbox -->
+                </div>
+
+                <div class="col-6 text-right">
+                    <a class="float-right" href="recover-account.html">비밀번호 찾기?</a>
+                </div>
+            </div>
+
+            <div class="mb-3">
+                <button type="submit" class="btn btn-block btn-primary">로그인</button>
+            </div>
+
+            <div class="text-center mb-3">
+                <p class="text-muted">계정이 없으신가요? <a href="/registUser">회원가입</a></p>
+            </div>
+
+            <!-- Divider -->
+            <!--<div class="text-center u-divider-wrapper my-3">
+                <span class="u-divider u-divider&#45;&#45;xs u-divider&#45;&#45;text">OR</span>
+            </div>-->
+            <!-- End Divider -->
+
+            <!-- Signin Social Buttons -->
+            <!--<div class="row mx-gutters-2 mb-4">
+                <div class="col-sm-6 mb-2 mb-sm-0">
+                    <button type="button" class="btn btn-block btn-sm btn-facebook">
+                        <span class="fab fa-facebook-f mr-2"></span>
+                        Signin with Facebook
+                    </button>
+                </div>
+                <div class="col-sm-6">
+                    <button type="button" class="btn btn-block btn-sm btn-twitter">
+                        <span class="fab fa-twitter mr-2"></span>
+                        Signin with Twitter
+                    </button>
+                </div>
+            </div>-->
+            <!-- End Signin Social Buttons -->
+
+            <p class="small text-center text-muted mb-0">All rights reserved. &copy; KoreaEgg. 2018.</p>
+        </form>
+        <!-- ========== END MAIN CONTENT ========== -->
 </html>
