--- a/src/main/resources/templates/layout/default.html
+++ b/src/main/resources/templates/layout/default.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko"
       xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
     <head>
         <!-- Title -->
@@ -55,6 +56,7 @@
         <script type="text/javascript" th:src="@{/js/components/hs.modal-window.js}"></script>
         <script type="text/javascript" th:src="@{/js/components/hs.show-animation.js}"></script>
         <script type="text/javascript" th:src="@{/js/components/hs.go-to.js}"></script>
+        <script type="text/javascript" th:src="@{/js/components/hs.sticky-block.js}"></script>
 
         <script>
             $(window).on('load', function () {
@@ -127,13 +129,21 @@
                     <div class="card-header">
                         난가예보
                     </div>
-                    <div class="card-body bg-secondary">
+                    <div sec:authorize="!hasAuthority('CAST_READ')" class="card-body bg-secondary">
                         <div class="text-white">
                             <i class="u-icon">
                                 <span class="fa fa-lock u-icon__inner"></span>
                             </i>
-                            유통인 회원만 볼수 있습니다.
+                            <span>유통인 회원만 볼수 있습니다.<br/></span>
+                            <a href="/class"><span>등급보기</span></a>
                         </div>
+                    </div>
+                    <div sec:authorize="hasAuthority('CAST_READ')" class="card-body justify-content-center px-0 ">
+                        <a href="#" class="btn btn-secondary disabled" style="width: 18% !important;" role="button" aria-disabled="true">-2</a>
+                        <a href="#" class="btn btn-danger disabled" style="width: 18% !important;" role="button" aria-disabled="true">-1</a>
+                        <a href="#" class="btn btn-secondary disabled" style="width: 18% !important;" role="button" aria-disabled="true"> 0</a>
+                        <a href="#" class="btn btn-secondary disabled" style="width: 18% !important;" role="button" aria-disabled="true">+1</a>
+                        <a href="#" class="btn btn-secondary disabled" style="width: 18% !important;"  role="button" aria-disabled="true">+2</a>
                     </div>
                 </div>
                 <!-- End Card -->
@@ -162,18 +172,20 @@
                     <div class="card-body">
                         <div class="text-center px-lg-1 px-3">
                         <ul class="list-unstyled text-secondary">
-                            <li class="media align-items-center pb-2">
-                                <img class="max-width-5 mr-2"  th:src="@{/svg/business-icons/iStar_Design_Business_LineIcons_Live-66.svg}" alt="Image Description"/>
-                                <div class="media-body">
-                                    문의 게시판
-                                </div>
-                            </li>
-                            <li class="media align-items-center py-2">
-                                <img class="max-width-5 mr-2"  th:src="@{/svg/business-icons/iStar_Design_Business_LineIcons_Live-53.svg}" alt="Image Description"/>
-                                <div class="media-body">
-                                    (010) 5342 6646
-                                </div>
-                            </li>
+                            <a href="/board?qna" class="text-body">
+                                <li class="media align-items-center pb-2">
+                                    <img class="max-width-5 mr-2"  th:src="@{/svg/business-icons/iStar_Design_Business_LineIcons_Live-66.svg}" alt="Image Description"/>
+                                    <div class="media-body">
+                                        문의 게시판
+                                    </div>
+                                </li>
+                            </a>
+                                <li class="media align-items-center py-2">
+                                    <img class="max-width-5 mr-2"  th:src="@{/svg/business-icons/iStar_Design_Business_LineIcons_Live-53.svg}" alt="Image Description"/>
+                                    <div class="media-body">
+                                        <a>010-5342-6646</a>
+                                    </div>
+                                </li>
                         </ul>
                         <!--<p class="mb-0">문의주세요. 최선을 다해 상담해드립니다.</p>-->
                     </div>
